Starting to work on the professors timesheet page. table doesnt work yet

--- a/App/Learnova/Components/Layout/NavMenu.razor
+++ b/App/Learnova/Components/Layout/NavMenu.razor
@@ -2,6 +2,7 @@
 <MudNavMenu>
     <MudNavLink Href="/Dashboard"  Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Dashboard">Dashboard</MudNavLink>
     <MudNavLink Href="/Calendar" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.CalendarToday">Calendario</MudNavLink>
+    <MudNavLink Href="/ProfessorsTimesheet" Icon="@Icons.Material.Filled.CalendarViewWeek" Match="NavLinkMatch.All">Orario Professori</MudNavLink>
     <MudNavLink Href="/Subjects" Icon="@Icons.Material.Filled.School" Match="NavLinkMatch.All">Materie</MudNavLink></MudNavMenu>
 
 
