--- a/App/Learnova/Components/Pages/Dashboard.razor
+++ b/App/Learnova/Components/Pages/Dashboard.razor
@@ -1,6 +1,30 @@
 ﻿@page "/Dashboard"
-
+@using Learnova.Context
+@using Learnova.Entities
+@using Microsoft.EntityFrameworkCore
+@inject Account User
 <PageTitle>Dashboard</PageTitle>
-<MudText Typo="Typo.h1">Dashboard</MudText>
+<MudPaper Class="mx-3 my-4 py-2 px-2">
+    <MudText Typo="Typo.h3">@($"Benvenuto {Welcome()}")</MudText>
+    @if (User.CodiceRuolo == 3)
+    {
+        <MudText Typo="Typo.subtitle1">@($"Genitore di {Db.Genitoris.Include(x => x.CodiceStudentes).First().CodiceStudentes.Select(x =>$"{x.Nome} {x.Cognome}" ).First()}")</MudText>
+    }
+    
+</MudPaper>
+@code
+{
+    public MyDbContext Db = new MyDbContext();
 
+    private string Welcome()
+    {
+        var tmp= Db.Studentis.Select(x =>new {x.Cf,x.Nome,x.Cognome,x.CodiceAccount})
+            .Union(Db.Genitoris.Select(x =>new {x.Cf,x.Nome,x.Cognome,x.CodiceAccount}))
+            .Union(Db.Professoris.Select(x =>new {x.Cf,x.Nome,x.Cognome,x.CodiceAccount}))
+            .First(x => x.CodiceAccount==User.Username);
+        
+        return $"{tmp.Nome} {tmp.Cognome}";
+    }
+
+}
 
