--- a/App/Learnova/Components/Pages/ProfessorsTimesheet/ProfessorsTimesheet.razor
+++ b/App/Learnova/Components/Pages/ProfessorsTimesheet/ProfessorsTimesheet.razor
@@ -47,7 +47,12 @@
                 }
                 else
                 {
-                    <MudTd>@("/")</MudTd>
+                    <MudTd>
+                        <MudPaper Class="py-3" Outlined="true">
+                            <MudText Align="Align.Center">@("/")</MudText>
+                        </MudPaper>
+                        
+                    </MudTd>
                 }
            
             }
