--- a/App/Learnova/Components/Layout/EmptyLayout.razor
+++ b/App/Learnova/Components/Layout/EmptyLayout.razor
@@ -1,5 +1,6 @@
+@using Learnova.Entities
 @inherits LayoutComponentBase
-
+@inject Account User
 <LearnovaDefaultTheme></LearnovaDefaultTheme>
 <MudPopoverProvider />
 <MudDialogProvider />
