added class and list of students page

--- a/App/Learnova/Components/Layout/NavMenu.razor
+++ b/App/Learnova/Components/Layout/NavMenu.razor
@@ -11,7 +11,8 @@
     {
         <MudNavLink OnClick="GetSubjects"  Icon="@Icons.Material.Filled.School" Match="NavLinkMatch.All">Materie</MudNavLink>
     }
-    </MudNavMenu>
+    <MudNavLink Href="/Students" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.People">Studenti</MudNavLink>
+</MudNavMenu>
 
 
 @code
